# server

./: .gitignore  Dockerfile
qa/L0_perf_resnet/: test.sh
src/backends/backend/: CMakeLists.txt
src/backends/backend/dali/: .gitignore  Acknowledgements.txt  CMakeLists.txt
src/backends/backend/dali/cmake/: GTestUtils.cmake  Utils.cmake
src/backends/backend/dali/dali_backend/: CMakeLists.txt  common.h  dali_backend.cc  dali_backend.h  libdali_backend.ldscript
src/backends/backend/dali/dali_backend/dali_executor/: CMakeLists.txt  dali_executor.cc  dali_executor.h  dali_pipeline.cc  dali_pipeline.h  executor.test.cc  pipeline_group.cc  pipeline_group.h  pipeline_pool.h
src/backends/backend/dali/dali_backend/dali_executor/test/: test_utils.h
src/backends/backend/dali/dali_backend/model_provider/: model_provider.h
src/backends/backend/dali/dali_backend/utils/: api_utils.h  dali.h  error_handling.h  logging.cc  utils.h
src/backends/backend/dali/docs/examples/: resize_pipeline.py
src/backends/backend/dali/docs/examples/rn50_ensemble/: rn50_pipeline.py  setup_resnet50_example.sh
src/backends/backend/dali/docs/examples/rn50_ensemble/model_repository/dali_backend/: config.pbtxt
src/backends/backend/dali/docs/examples/rn50_ensemble/model_repository/ensemble_dali_resnet/: config.pbtxt
src/backends/backend/dali/utils/: lint.py
src/backends/tensorrt/: plan_backend.cc  plan_backend.h  plan_utils.cc  plan_utils.h
src/core/: backend_context.cc
